--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
 *{
     outline: none;
 }
+
 body{
     background-image: url(http://media-s3-us-east-1.ceros.com/hype-beast/images/2018/07/13/a9a51bc0b8d626db493ab5f9a971b043/background-hero.png);
 }
+
 html, body, header {
     
     display: flex;
@@ -11,16 +13,19 @@ html, body, header {
     margin: auto;
     flex-wrap: wrap;
 }
+
 header{
     color:#ffffff;
     font-family:calibri;
-    font-size: 25px;
-    height: 60px;
-    margin-top: -20px;
- 
+    font-size: 28px;
+    height: 86px;
+    margin-top: -5px;
 }
-main{height: 100%;
-    display: flex;}
+
+main{
+    height: 100%;
+    display: flex;
+}
 
 .login {
     display: flex;
@@ -36,6 +41,7 @@ img {
     width: 32%;
     margin: 7em auto 0.5em;
 }
+
 .loginInput {
     margin: 1.5em auto;
     display: flex;
@@ -63,40 +69,56 @@ img {
     height: 45px;
     border-radius: 4px;
 }
+
 #message {
     align-self: center;
 }
+
 .register{
     align-self: center;
-
 }
+
 .forgotPassword{
     text-align: right;
     margin: 0.4em;
     }
+
 nav{
     display:flex;
         flex-wrap: wrap;
 }
+
 input[type="image" i]{
     width: 100%;
 }
 
+.wp-caption:hover{
+    transform: scale(1.3);
+    transition:.5s;
+}
+
+ .wp-caption:hover{
+     background-color:rgb(161,249,255,0.6);
+     border-radius: 50%;
+ }
+
 .wp-caption {
     position: relative;
-    padding: 0;
+    padding: 13px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    width: 22%;
+    width: 26%;
     justify-content: center;
     }
-    .wp-caption img {
+
+.wp-caption img {
     display: block;
     max-width: 100%;
     height: auto;
     }
-    .wp-caption-text {
+
+.wp-caption-text {
     opacity: 0;
     position: absolute;
     width: 100%;
@@ -111,8 +133,10 @@ input[type="image" i]{
     transition: opacity .3s ease-in-out;
     font-family: calibri;
     }
-    .wp-caption:hover .wp-caption-text {
+
+.wp-caption:hover .wp-caption-text {
     opacity: 1;
+    text-align: center;
     }
 
 .hide {
@@ -120,6 +144,7 @@ input[type="image" i]{
 }
 
 @media only screen and (min-width: 768px){
+
     html,body{
         
         background-size: cover;
@@ -131,36 +156,40 @@ input[type="image" i]{
         font-size:50px;
         height: 150px;
     }
+
     input[type="image" i] {
     width: 75%;
-}
+    }
+
     .login {
-
-width: 536px;
-
-height: 501px;
-
-justify-content: center;
-
-align-self: center;
+    width: 536px;
+    height: 501px;
+    justify-content: center;
+    align-self: center;
 }
+
 img {
     width: 25%;
 }
+
 .loginInput {
     margin: 0.5em auto;
     height: 214px;
     inline-size: 367px;
 }
+
 .btnLogin{
     inline-size: 157px;
     align-self: center;
 }
+
 .wp-caption {
     width: 15%;
+    padding: 29px;
 }
+
  .wp-caption-text {
-     font-size:30px;
+     font-size: 18px;
      padding: 0em;
  }
 }
