--- a/src/style.css
+++ b/src/style.css
@@ -143,12 +143,13 @@ input[type="image" i]{
     display: none;
 }
 
-.menu{
+.contenedor{
     width:90px;
     height:240px;
     position:absolute;
     right:0px;
     bottom:0px;
+    z-index:1;
   }
   .botonF1{
     width:60px;
@@ -158,14 +159,13 @@ input[type="image" i]{
     right:0;
     bottom:0;
     position:absolute;
-    margin-right:16px;
-    margin-bottom:16px;
+    margin: 16px;
     border:none;
     outline:none;
     color:#FFF;
     font-size:36px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    transition:.3s;  
+    transition:.3s;
   }
   span{
     transition:.5s;  
@@ -177,13 +177,13 @@ input[type="image" i]{
     transform:scale(1.1);
   }
   .btn{
-    width:40px;
-    height:40px;
+    width: 70px;
+    height: 70px;
     border-radius:100%;
     border:none;
     color:#FFF;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    font-size:28px;
+    font-size: 18px;
     outline:none;
     position:absolute;
     right:0;
@@ -193,22 +193,22 @@ input[type="image" i]{
   }
   .botonF2{
     background:#2196F3;
-    margin-bottom:85px;
+    margin-bottom: 100px;
     transition:0.5s;
   }
   .botonF3{
     background:#673AB7;
-    margin-bottom:130px;
+    margin-bottom: 179px;
     transition:0.7s;
   }
   .botonF4{
     background:#009688;
-    margin-bottom:175px;
+    margin-bottom: 266px;
     transition:0.9s;
   }
   .botonF5{
     background:#FF5722;
-    margin-bottom:220px;
+    margin-bottom: 353px;
     transition:0.99s;
   }
   .animacionVer{
@@ -256,6 +256,9 @@ img {
     align-self: center;
 }
 
+.contenedor{
+ heiht: 100px;
+}
 .wp-caption {
     width: 15%;
     padding: 29px;
