--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ img {
     margin: 7em auto 0.5em;
 }
 
-.loginInput {
+.login-input {
     margin: 1.5em auto;
     display: flex;
     flex-direction: column;
@@ -60,7 +60,7 @@ img {
     font-size: 16px;
 }
 
-.btnLogin{
+.btn-login{
     background-color: #2C97C1;
     border-color: #2C97C1;
     color: #ffffff;
@@ -78,7 +78,7 @@ img {
     align-self: center;
 }
 
-.forgotPassword{
+.forgot-password{
     text-align: right;
     margin: 0.4em;
     }
@@ -152,7 +152,7 @@ input[type="image" i]{
     bottom:0px;
     z-index: 1;
   }
-  .botonF1{
+  .boton1{
     width:60px;
     height:60px;
     border-radius:100%;
@@ -173,10 +173,10 @@ input[type="image" i]{
   span{
     transition:.5s;  
   }
-  .botonF1:hover span{
+  .boton1:hover span{
     transform:rotate(360deg);
   }
-  .botonF1:active{
+  .boton1:active{
     transform:scale(1.1);
   }
   .btn{
@@ -194,22 +194,22 @@ input[type="image" i]{
     margin-right:26px;
     transform:scale(0);
   }
-  .botonF2{
+  .boton2{
     background:#2196F3;
     margin-bottom:85px;
     transition:0.5s;
   }
-  .botonF3{
+  .boton3{
     background:#673AB7;
     margin-bottom:130px;
     transition:0.7s;
   }
-  .botonF4{
+  .boton4{
     background:#009688;
     margin-bottom:175px;
     transition:0.9s;
   }
-  .botonF5{
+  .boton5{
     background:#FF5722;
     margin-bottom:220px;
     transition:0.99s;
@@ -248,13 +248,13 @@ input[type="image" i]{
         width: 25%;
     }
 
-    .loginInput {
+    .login-input {
         margin: 0.5em auto;
         height: 214px;
         inline-size: 367px;
     }
 
-    .btnLogin{
+    .btn-login{
         inline-size: 157px;
         align-self: center;
     }
