--- a/src/style.css
+++ b/src/style.css
@@ -116,7 +116,7 @@ input[type="image" i]{
 }
 
 .wp-caption:hover{
-   background-color:rgb(161,249,255,0.6);
+   /* background-color:rgb(161,249,255,0.6); */
    border-radius: 50%;
 }
 
@@ -128,6 +128,7 @@ input[type="image" i]{
   flex-wrap: wrap;
   width: 26%;
   justify-content: center;
+  background-image: none;
   }
 
 .wp-caption img {
@@ -157,6 +158,13 @@ input[type="image" i]{
   opacity: 1;
   text-align: center;
   }
+
+.type_background{
+  display: inline;
+  position: absolute;
+  border-radius: 50%;
+  z-index: -1;
+}
 
 /* botones pokebola-------------------------------------------------------------------------------- */
 .contenedor1{
@@ -287,6 +295,7 @@ input[type="image" i]{
 .botonHuevo:active{
   transform:scale(1.1);
 }
+
 .boton2km{
   background:rgb(21, 180, 87);
   margin-bottom: 70px;
@@ -310,6 +319,17 @@ input[type="image" i]{
   transition:0.9s;
   background-image: url(img/10km.png);
   background-size: cover;
+}
+.notInEggs{
+  background-image: url(img/huevo.png);
+  background-size: cover;
+  position:absolute;
+  margin-bottom: 204px;
+  margin-right: 13px;
+  transition:0.9s;
+  filter: brightness(0.5);
+  border: solid red;
+
 }
 
 /* botones tipo ------------------------------------------------------------------------------------- */
