npm test passed, antes de testear funciones

--- a/src/style.css
+++ b/src/style.css
@@ -276,7 +276,7 @@ input[type="image" i]{
   z-index: 7;
 }
 
-.botonHuevo{
+.boton-huevo{
   width: 50px;
   height: 50px;
   border-radius:100%;
@@ -293,7 +293,7 @@ input[type="image" i]{
   z-index: 7;
 }
 
-.botonHuevo:active{
+.boton-huevo:active{
   transform:scale(1.1);
 }
 
@@ -350,7 +350,7 @@ input[type="image" i]{
   bottom:0px;
   z-index: 6;
 }
-.Types{
+.types{
   width: 86px;
   height: 29px;
   border-radius: 20%;
@@ -366,130 +366,130 @@ input[type="image" i]{
   z-index: 6;
 }
 
-.Types:active{
+.types:active{
   transform:scale(1.1);
 }
 
-.Bug{
+.bug{
   margin-bottom: 60px;
   margin-right: 0px;
   transition:0.5s;
   background-image: url(img/Bug.png);
   background-size: cover;
 }
-.Dark{
+.dark{
   margin-bottom: 105px;
   margin-right: 0px;
   transition:0.7s;
   background-image: url(img/Dark.png);
   background-size: cover;
 }
-.Dragon{
+.dragon{
   margin-bottom: 150px;
   margin-right: 0px;
   transition:0.9s;
   background-image: url(img/Dragon.png);
   background-size: cover;
 }
-.Electric{
+.electric{
   margin-bottom: 195px;
   margin-right: 0px;
   transition:1.1s;
   background-image: url(img/Electric.png);
   background-size: cover;
 }
-.Fairy{
+.fairy{
   margin-bottom: 240px;
   transition:1.3s;
   margin-right: 0px;
   background-image: url(img/Fairy.png);
   background-size: cover;
 }
-.Fighting{
+.fighting{
   margin-bottom: 285px;
   margin-right: 0px;
   transition:1.5s;
   background-image: url(img/Fighting.png);
   background-size: cover;
   }
-.Fire{
+.fire{
   margin-bottom: 60px;
   margin-right: 45px;
   transition:0.5s;
   background-image: url(img/Fire.png);
   background-size: cover;
 }
-.Flying{
+.flying{
   margin-bottom: 105px;
   margin-right: 45px;
   transition:0.7s;
   background-image: url(img/Flying.png);
   background-size: cover;
   }
-.Ghost{
+.ghost{
   margin-bottom: 150px;
   margin-right: 45px;
   transition:0.9s;
   background-image: url(img/Ghost.png);
   background-size: cover;
   }
-.Grass{
+.grass{
   margin-bottom: 195px;
   margin-right: 45px;
   transition:1.1s;
   background-image: url(img/Grass.png);
   background-size: cover;
   }
-.Ground{
+.ground{
   margin-bottom: 240px;
   margin-right: 45px;
   transition:1.3s;
   background-image: url(img/Ground.png);
   background-size: cover;
   }
-.Ice{
+.ice{
   margin-bottom: 285px;
   margin-right: 45px;
   transition:1.5s;
   background-image: url(img/Ice.png);
   background-size: cover;
   }
-.Normal{
+.normal{
   margin-bottom: 60px;
   margin-right: 90px;
   transition:0.5s;
   background-image: url(img/Normal.png);
   background-size: cover;
   }
-.Poison{
+.poison{
   margin-bottom: 105px;
   margin-right: 90px;
   transition:0.7s;
   background-image: url(img/Poison.png);
   background-size: cover;
   }
-.Psychic{
+.psychic{
   margin-bottom: 150px;
   margin-right: 90px;
   transition:0.9s;
   background-image: url(img/Psychic.png);
   background-size: cover;
   }
-.Rock{
+.rock{
   margin-bottom: 195px;
   margin-right: 90px;
   transition:1.1s;
   background-image: url(img/Rock.png);
   background-size: cover;
   }
-.Steel{
+.steel{
   margin-bottom: 240px;
   margin-right: 90px;
   transition:1.3s;
   background-image: url(img/Steel.png);
   background-size: cover;
   }
-.Water{
+.water{
   margin-bottom: 285px;
   margin-right: 90px;
   transition:1.5s;
